@@ -207,6 +207,9 @@ public:
     menu_math_as_1D_ASCII,
     menu_math_as_2D_ASCII,
     menu_math_as_graphics,
+    menu_noAutosubscript,
+    menu_defaultAutosubscript,
+    menu_alwaysAutosubscript,
     button_factor_id,
     button_solve,
     button_solve_ode,
