@@ -1,5 +1,6 @@
 Current:
   * Defer any try to change maxima's configuration until all questions are answered.
+  * A menu item that sets the autosubscript feature for the current worksheet.
 
 18.02:
   * More tooltips
